# python-project-83

./: .gitignore  Makefile  README.md  build.sh  data_urls.sql  database.sql  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml
page_analyzer/: app.py  search.py  validator.py
page_analyzer/templates/: form.html  index.html  layout.html  list.html  show.html
page_analyzer/templates/urls/: index.html  show.html
tests/: conftest.py  test_all.py
