[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page analizer"
authors = ["slavanr45 <slava.r45@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analizer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
